[ADD] Frontend update improve in lateral bar of lists. [MISS] Bug not seeing horizontal line, align items, add existing list button.

--- a/client/frontend/src/App.css
+++ b/client/frontend/src/App.css
@@ -38,21 +38,20 @@
 }
 
 .container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background-color: #f9f9f9;
+  display: grid;
+  grid-template-columns: 23% 1fr; /* 23% for content-left and 1fr for content-right */
+  min-height: 100vh;
+  overflow-x: auto;
 }
 
 .content-left,
 .content-right {
-  flex: 0.15;
   padding: 20px;
   background-color: #f9f9f9;
-  margin-top: 20px;
-  padding-right: 50px;
+}
+
+.content-left {
+  position: relative;
 }
 
 .vertical-line {
@@ -60,7 +59,7 @@
   height: 100%;
   background-color: #ccc;
   position: absolute;
-  left: 20%;
+  left: 100%;
 }
 
 .right-text {
@@ -77,24 +76,21 @@
 }
 
 .logo-container {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  align-items: top;
   display: flex;
+  align-items: center;
+  margin-bottom: 40px;
 }
 
 .logo {
   width: 50px;
   margin-left: 10px;
-  margin-right: 20px; 
-  margin-bottom: 40px;
+  margin-right: 20px;
 }
 
 .list-title {
   position: absolute;
   top: 20px;
-  left: 350px;
+  left: 100%;
   margin-left: 10px;
   padding: 5px;
   font-size: 30px;
@@ -114,21 +110,50 @@
   font-size: 25px;
 }
 
-.list-of-lists {
-  margin-left: 20px;
+.list-button {
+  border: none;
+  padding: 3px 3px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
 }
 
-.button-list {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+.lists {
+  margin: 4px;
+  min-height: 200px;
+  max-height: 60%;
+  overflow-y: auto;
+}
+
+.list-of-lists {
+  margin-left: 20px;
+  margin-top: 7px;
+  overflow-y: auto;
+}
+
+.list-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 23%;
+  background-color: #f9f9f9;
+  overflow-y: auto;
+}
+
+.list-content {
+  padding: 20px;
+}
+
+.button-list,
+.button-item {
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
-  margin: 10px 0;
   padding: 10px 20px;
 }
 
@@ -141,24 +166,24 @@
   height: 1px;
   background-color: #ccc;
   position: absolute;
-  left: 20%;
-  top: 150px; /* Adjust the value as needed */
+  left: 100%;
+  top: 150px;
 }
 
 .button-item {
   position: absolute;
-  top: 100px; /* Adjust the value as needed */
+  top: 100px;
   left: 400px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
   margin: 40px 0;
   margin-top: 90px;
   margin-left: -50px;
-  padding: 10px 20px;
+}
+
+.button-list {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  margin: 10px 0;
 }
 
 .empty-message {
@@ -173,4 +198,3 @@ h2 {
   margin: 0px;
   padding: 5px;
 }
-
